[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/CodeSnippetPopup/CodeSnippetPopup.gd" type="Script" id=1]
[ext_resource path="res://addons/CodeSnippetPopup/TextEditPopupPanel.tscn" type="PackedScene" id=2]

[sub_resource type="Image" id=1]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 1 )
size = Vector2( 16, 16 )

[node name="CodeSnippetPopup" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -292.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1016.0
margin_bottom = 300.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1016.0
margin_bottom = 26.0

[node name="Filter" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 862.0
margin_bottom = 26.0
hint_tooltip = "Ending the search_string with \" X\" will jump to the X-th item in the list.

Click the \"Edit\" button to edit the code snippets. 
Within the snippet editor is a \"Help\" page. Please look at it to see how to format snippets and how to use tabstops etc."
size_flags_horizontal = 3
clear_button_enabled = true
right_icon = SubResource( 2 )
placeholder_text = "Look at this tooltip for help."
caret_blink = true
caret_blink_speed = 0.5

[node name="Copy" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 866.0
margin_right = 909.0
margin_bottom = 26.0
text = "Copy"

[node name="Edit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 913.0
margin_right = 949.0
margin_bottom = 26.0
text = "Edit"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 953.0
margin_right = 1016.0
margin_bottom = 26.0
text = "Settings"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 1016.0
margin_bottom = 592.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ " 0  :: ", null, false, "_ready", null, false, "", null, true, " 1  :: ", null, false, "_enter_tree", null, false, "", null, true, " 2  :: ", null, false, "_exit_tree", null, false, "", null, true, " 3  :: ", null, false, "_physics_process", null, false, " (delta : float)", null, true, " 4  :: ", null, false, "_process", null, false, " (delta : float)", null, true, " 5  :: ", null, false, "_input", null, false, " (event : InputEvent)", null, true, " 6  :: ", null, false, "_unhandled_input", null, false, " (event : InputEvent)", null, true, " 7  :: ", null, false, "_unhandled_key_input", null, false, " (event : InputEventKey)", null, true, " 8  :: ", null, false, "_gui_input", null, false, " (event : InputEvent)", null, true, " 9  :: ", null, false, "_draw", null, false, "", null, true ]
max_columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEditPopupPanel" parent="." instance=ExtResource( 2 )]
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="SettingsPopup" type="WindowDialog" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 1020.0
margin_bottom = 304.0
rect_min_size = Vector2( 600, 300 )
window_title = "Settings"
resizable = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="SettingsPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPopup/MarginContainer"]
margin_right = 976.0
margin_bottom = 260.0

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPopup/MarginContainer/VBoxContainer"]
margin_right = 976.0
margin_bottom = 24.0

[node name="CustomShortcut" type="Label" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 116.0
margin_bottom = 19.0
hint_tooltip = " Check Godot's shortcut to see what the proper format is (Editor >Editor Settings > Shortcuts)."
mouse_filter = 1
text = "Keyboard shortcut"

[node name="LineEdit" type="LineEdit" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 776.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
text = "Control+Tab"
align = 2
caret_blink = true
caret_blink_speed = 0.5

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsPopup/MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 976.0
margin_bottom = 52.0

[node name="AdaptiveHeight" type="Label" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
hint_tooltip = "Change the height of the popup based on the number of items in the list."
mouse_filter = 1
text = "Adaptive height"

[node name="CheckBox" type="CheckBox" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 952.0
margin_right = 976.0
margin_bottom = 24.0
size_flags_horizontal = 10
pressed = true
align = 2
expand_icon = true

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsPopup/MarginContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 976.0
margin_bottom = 80.0

[node name="PopupHeight" type="Label" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 129.0
margin_bottom = 19.0
mouse_filter = 1
text = "Main popup's height"

[node name="SpinBox" type="SpinBox" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 776.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
max_value = 6000.0
value = 500.0
align = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="SettingsPopup/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 976.0
margin_bottom = 108.0

[node name="PopupWidth" type="Label" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_top = 5.0
margin_right = 124.0
margin_bottom = 19.0
mouse_filter = 1
text = "Main popup's width"

[node name="SpinBox2" type="SpinBox" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 776.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
max_value = 6000.0
value = 750.0
align = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="SettingsPopup/MarginContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 976.0
margin_bottom = 136.0

[node name="EditorHeight" type="Label" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer5"]
margin_top = 5.0
margin_right = 188.0
margin_bottom = 19.0
mouse_filter = 1
text = "Snippet editor's popup height"

[node name="SpinBox3" type="SpinBox" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 776.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
max_value = 6000.0
value = 1000.0
align = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="SettingsPopup/MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 976.0
margin_bottom = 164.0

[node name="EditorWidth2" type="Label" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer6"]
margin_top = 5.0
margin_right = 183.0
margin_bottom = 19.0
mouse_filter = 1
text = "Snippet editor's popup width"

[node name="SpinBox4" type="SpinBox" parent="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer6"]
margin_left = 776.0
margin_right = 976.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
max_value = 6000.0
value = 850.0
align = 2
[connection signal="popup_hide" from="." to="." method="_on_CodeSnippetPopup_popup_hide"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/Filter" to="." method="_on_Filter_text_changed"]
[connection signal="text_entered" from="MarginContainer/VBoxContainer/HBoxContainer/Filter" to="." method="_on_Filter_text_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Copy" to="." method="_on_Copy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Edit" to="." method="_on_Edit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="item_activated" from="MarginContainer/VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="popup_hide" from="SettingsPopup" to="." method="_on_SettingsPopup_popup_hide"]
[connection signal="text_changed" from="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="toggled" from="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer2/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="value_changed" from="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer3/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer4/SpinBox2" to="." method="_on_SpinBox2_value_changed"]
[connection signal="value_changed" from="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer5/SpinBox3" to="." method="_on_SpinBox3_value_changed"]
[connection signal="value_changed" from="SettingsPopup/MarginContainer/VBoxContainer/HBoxContainer6/SpinBox4" to="." method="_on_SpinBox4_value_changed"]
